--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.70MB/s(Youtube:不良林), server: 85.208.108.93, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇨🇦 加拿大-1.68MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 台湾-1.90MB/s(Youtube:不良林), server: 724tw01.ok365.cyou, port: 443, type: trojan, password: 4b0a60e7-4975-43e8-b9b0-1d156ce98693, sni: 724tw01.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-265.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: 38.143.66.99, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.06MB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-226.7KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-860.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-192.3KB/s(Youtube:不良林), server: 120.241.236.218, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-3.01MB/s(Youtube:不良林), server: 38.68.134.85, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 38.68.134.85, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 51.81.223.22, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇭🇰 香港-367.6KB/s(Youtube:不良林), server: 715hk03.ok365.cyou, port: 12388, type: trojan, password: 4b0a60e7-4975-43e8-b9b0-1d156ce98693, sni: 715hk03.ok365.cyou, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
@@ -66,7 +66,6 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
       - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,13 +73,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
@@ -89,13 +88,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
@@ -105,13 +104,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
@@ -130,13 +129,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
