--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.06MB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-226.7KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
   - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-860.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-192.3KB/s(Youtube:不良林), server: 120.241.236.218, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 38.68.134.85, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 51.81.223.22, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-367.6KB/s(Youtube:不良林), server: 715hk03.ok365.cyou, port: 12388, type: trojan, password: 4b0a60e7-4975-43e8-b9b0-1d156ce98693, sni: 715hk03.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-218.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: 38.114.114.19, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-265.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林), server: 185.167.116.252, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林), server: 185.167.116.24, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林), server: 185.167.116.24, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇦🇺 澳大利亚-457.7KB/s(Youtube:不良林), server: 185.167.116.252, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇦🇺 澳大利亚-1.17MB/s(Youtube:不良林), server: 185.167.116.24, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-860.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-192.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-457.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-860.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-192.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-457.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-860.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-192.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-457.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-860.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-192.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-457.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-860.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-192.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-457.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-860.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-192.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-457.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-860.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-192.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-457.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
